<resources>
    <string name="app_name">Tarea2</string>

    <string name="txtNombre">Nombre completo</string>
    <string name="txtfecha">Fecha de nacimiento</string>
    <string name="txtTelefono">Teléfono</string>
    <string name="txtEmail">Email</string>
    <string name="txtDescripcion">Descripción contacto</string>
    <string name="siguiente">Siguiente</string>

    <string name="lblTitulo">Confirmar Datos</string>
    <string name="lblNombre">Nombre:</string>
    <string name="lblFecha">Fecha de nacimiento:</string>
    <string name="lblTelefono">Teléfono:</string>
    <string name="lblEmail">Email:</string>
    <string name="lblDescripcion">Descripción:</string>

    <string name="btnEditar">Editar datos</string>
</resources>
