<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context="mx.pepivsky.tarea2.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"

            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextNombre"
                android:hint="@string/txtNombre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtfecha"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="238dp"
                android:id="@+id/datePicker2"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextTelefono"
                android:layout_gravity="center_horizontal"
                android:hint="@string/txtTelefono"
                android:phoneNumber="true" />

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEmail"
                android:layout_gravity="center_horizontal"
                android:hint="@string/txtEmail" />

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextDescripcion"
                android:hint="@string/txtDescripcion" />



        </LinearLayout>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:id="@+id/btnSiguiente"
        android:theme="@style/MiBotonRaised"



        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/view"
        android:layout_alignStart="@+id/view" />

</RelativeLayout>