<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.pepivsky.tarea2.confirmar_datos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblTitulo"
        android:id="@+id/lblTitulo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblNombre"
        android:id="@+id/lblNombre"
        android:layout_below="@+id/lblTitulo"

        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblFecha"
        android:id="@+id/lblFecha"
        android:layout_below="@+id/lblNombre"

        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblTelefono"
        android:id="@+id/lblTelefono"
        android:layout_below="@+id/lblFecha"

        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblEmail"
        android:id="@+id/lblEmail"
        android:layout_below="@+id/lblTelefono"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblDescripcion"
        android:id="@+id/lblDescripcion"
        android:layout_below="@+id/lblEmail"

        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEditar"
        android:id="@+id/btnEditar"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/lblDescripcion"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Nombre"
        android:id="@+id/textNombre"
        android:layout_below="@+id/lblTitulo"
        android:layout_toEndOf="@+id/lblTelefono"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="00/00/0000"
        android:id="@+id/textFecha"
        android:layout_above="@+id/lblTelefono"
        android:layout_toEndOf="@+id/lblFecha" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Telefono"
        android:id="@+id/textTelefono"
        android:layout_below="@+id/lblFecha"
        android:layout_alignStart="@+id/textNombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="test@email.com"
        android:id="@+id/textEmail"
        android:layout_below="@+id/lblTelefono"
        android:layout_toEndOf="@+id/lblEmail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Descripcion"
        android:id="@+id/textDesc"
        android:layout_below="@+id/textEmail"
        android:layout_toEndOf="@+id/lblDescripcion" />

</RelativeLayout>